Sun Nov  7 16:42:10 GMT 2004 (njh)
----------------------------------
  * libclamav/message.c:	Handle paragraph 4 of RFC2231

Sat Nov  6 21:45:21 GMT 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Fix possible crash when handling illegal RFC2047 header

Fri Nov  5 18:09:24 CET 2004 (tk)
---------------------------------
  * docs/MacOSX: update (Dale Enterprise L.L.C)

Fri Nov  5 13:08:24 CET 2004 (tk)
---------------------------------
  * configure: improve zlib test

Fri Nov  5 11:04:45 CET 2004 (tk)
---------------------------------
  * freshclam: add support for AllowSupplementaryGroups (patch by Ales Casar
	       <casar*uni-mb.si>)

Fri Nov  5 09:44:43 CET 2004 (tk)
---------------------------------
  * add UPGRADE file

Fri Nov  5 09:09:58 CET 2004 (tk)
---------------------------------
  * docs: better description of ArchiveBlockMax

Thu Nov  4 21:47:14 CET 2004 (tk)
---------------------------------
  * libclamav/snprintf.c: fix compilation error (patch by Nigel)

Thu Nov  4 10:14:57 GMT 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Applied readdir_r patch from TK

Thu Nov  4 08:24:21 GMT 2004 (njh)
----------------------------------
  * libclamav/clamav-milter:	Fix segfault on startup in LocalSocket mode in
			SESSION mode

Wed Nov  3 12:47:41 GMT 2004 (njh)
----------------------------------
  * libclamav/clamav-milter:	Save the original subject as X-Original-Subject
			when running in advisory or qurantine mode
			SESSION mode: warn when no clamd can be reached

Wed Nov  3 12:50:19 CET 2004 (tk)
---------------------------------
  * docs/MacOSX: update (Dale Enterprise L.L.C)

Tue Nov  2 13:26:01 CET 2004 (tk)
---------------------------------
  * libclamav/clamav.h: fix bad alias of CL_ENCRYPTED (thanks to Jan ONDREJ
			(SAL) <ondrejj*salstar.sk>)

Tue Nov  2 05:12:45 CET 2004 (tk)
---------------------------------
  * docs/MacOSX: update (Dale Enterprise L.L.C)

Tue Nov  2 04:58:43 CET 2004 (tk)