@@ -1,3 +1,7 @@
+Mon Nov  8 10:01:48 CET 2004 (tk)
+---------------------------------
+  * libclamav/scanners.c: handle error conditions of cli_scandesc()
+
 Sun Nov  7 16:42:10 GMT 2004 (njh)
 ----------------------------------
   * libclamav/message.c:	Handle paragraph 4 of RFC2231
